# sz-validation-framework

./: 1-download.md  2-convert2bids.md  3-runSzDetection.md  4-evaluate.md  README.md  requirements.txt
3-runSzDetection/: run.py
3-runSzDetection/docker-szDetection/: Dockerfile  compose.yaml
3-runSzDetection/docker-szDetection/algo/: README.md  pyproject.toml
3-runSzDetection/docker-szDetection/algo/src/algo/: __main__.py  sz_detection.py
4-evaluate/: README.md  pyproject.toml
4-evaluate/src/evaluate/: __main__.py  evaluate.py
dataIo/: annotations.py  eeg.py
dataIo/bids/: README_chbmit.md  convert_chbmit2bids.py  dataset_description_chbmit.json  events.json  participants.json
dataIo/bids/chbmit/: convert2bids.py  dataset_description.json  eeg.json
dataIo/load_annotations/: load_annotations_chb.py
dataIo/test/: PN00-5_sample.edf  P_ID10_r5_sample.edf  aaaaaaac_s001_t000_sample.edf  makeSampleEdf.py  testEeg.py
evaluate/: evaluate.py
loadAnnotations/: CHBMITAnnotationConverter.py  seizeitAnnotationConverter.py  sienaAnnotationConverter.py  tuhAnnotationConverter.py
loadEeg/: loadEdf.py
loadEeg/test/: chb01_01_sample.edf  makeSampleEdf.py
timescoring/: annotations.py  scoring.py  visualization.py
