[project]
name = "algo"
version = "0.1.0"
description = "Sample python package that takes an EDF file and produces a TSV annotation as an output."
authors = [
    { name = "Jonathan Dan", email = "jonathan.dan@epfl.ch" }
]
dependencies = [
    "epilepsy2bids>=0.0.1",
    "timescoring>=0.0.5",
    "numpy>=1.26.4",
    "pyedflib>=0.1.37",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/algo"]
